--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
             <url>http://104.197.213.196:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>deployment</id>
+            <id>srinu</id>
             <name>Internal Snapshot Releases</name>
             <url>http://104.197.213.196:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
