--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.javaee7.sample</groupId>
     <artifactId>javaee7-simple-sample</artifactId>
-    <version>9.0-SNAPSHOT</version>
+    <version>9.0-RELEASE</version>
     <packaging>war</packaging>
     <name>javaee7-simple-sample</name>
     <properties>
@@ -33,7 +33,7 @@
         <repository>
             <id>srinu</id>
             <name>Internal Releases</name>
-            <url>http://104.154.95.213:8081/repository/maven-releases/</url>
+            <url>http://35.226.170.132:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>srinu</id>
